--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,13 @@
 name: Build and Push Docker Image to GHCR
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
   pull_request:
     branches:
       - dev
+      - universal-data-index
     types: [closed]
 
 jobs:
