--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - dev
       - universal-data-index
-    types: [closed]
+    types: [opened, synchronize, reopened, closed] # Expanded trigger types for universal-data-index branch
 
 jobs:
   build:
