--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,7 @@ on:
   pull_request:
     branches:
       - dev
-      - universal-data-index
-    types: [opened, synchronize, reopened, closed] # Expanded trigger types for universal-data-index branch
+    types: [closed] # Expanded trigger types for universal-data-index branch
 
 jobs:
   build:
