--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
     if: |
       github.event_name == 'workflow_dispatch' ||
       github.event_name == 'release' ||
-      (github.event_name == 'pull_request' && github.base_ref == 'dev' && github.event.pull_request.merged == true)
+      (github.event_name == 'pull_request' && github.base_ref != 'main' && github.event.pull_request.merged == true)
     needs:
       - build
     steps:
