--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   stream-checker:
-    image: ghcr.io/krinkuto11/streamflow:latest
+    image: sbeimel/streamflow-mod:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.multi-stage
     ports:
       - "5000:5000"   # Flask API (serves both API and static frontend)
     volumes:
